Fix overflow, fix dropdown dimensions

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a {
 
 /* animation hover */
 .my_card:hover {
+    cursor: pointer;
     animation: cssAnimation_0 92ms 4 ease-out 115ms;
 }
 
@@ -43,8 +44,8 @@ a {
     background-position: center;
 }
 
-body {
-    overflow-x: hidden;
+.ps-card {
+    cursor: pointer;
 }
 
 /* HEADER */
@@ -55,6 +56,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 5;
+    font-size: .9rem;
 }
 /* change color nav bootstrap */
 .nav-link {
@@ -70,8 +72,8 @@ header {
     content: url(../img/chevron-down-solid.svg);
     display: inline-block;
     margin-left: 6px;
-    width: 13px;
-    vertical-align: middle;
+    width: 12px;
+    vertical-align: sub;
 }
 
 .nav-item.dropdown:hover .my_dropdown-toggle::after{
@@ -133,6 +135,7 @@ li a img.lens {
 
 
 .wrapper-ps5-little-box:hover {
+    cursor: pointer;
     height: 100%;
     opacity: 1;
     transition: .1s ease-in;
